# LeaseFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/pos-analyst/: README.md  SKILL.md
agents/pos-analyst/agents/: pos_analyst.yaml
agents/pos-analyst/docs/: CICD.md  CONTEXT.md  DEPLOYMENT.md  INFRASTRUCTURE.md  MINIMAX_SETUP.md
agents/pos-analyst/examples/: README.md  strema_portfolio_context.md  strema_vast_runbook.md  submit_strema_job.ps1
agents/pos-analyst/references/: analysis-methodology.md  fnb-benchmarks.md  memory-schema.md  (+2 more)
apps/demo-html/: README.md  dashboard.html  dashboard.js  index.html  investors.html  investors.js  main.js  offer.html  offer.js  onboarding.html  onboarding.js  payout.html  payout.js  repayment.html  repayment.js  shared.js  styles.css
apps/frontend/: .env.example  PITCH.md  STREAM.md  STREAM_USECASES.md  index.html  package-lock.json  package.json  vite.config.ts
apps/imdad-app/: index.html  package-lock.json  package.json
data/dataset/: .gitignore  README.md  Schema.md  SimulationStrategy.md  generate_pos_dataset.py
docs/: MULTI_AGENT_ARCHITECTURE.md  TWO_STREAM_SCORING_SUMMARY.md  open-questions.md  projectDescription.md
docs/handoff/: 01_OVERVIEW.md  02_BACKEND_API.md  03_DESIGN.md  04_BUILD_PLAN.md  05_LOCAL_DEV.md  06_GOTCHAS.md  07_SKILLS.md  DEMO_CREDENTIALS.md  DEMO_MODE.md  README.md
services/backend/: .env.example  Dockerfile  requirements.txt
services/market-scoring-api/: mypythonfile.py  test_mypythonfile.py
(+196 files in other folders)
