[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "openai==1.59.4",
    "pandas==2.2.3",
    "pydantic==2.10.4",
    "pymupdf==1.25.1",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "resend==2.5.1",
    "supabase==2.11.0",
    "uvicorn[standard]==0.34.0",
]
